# diorama

./: Cargo.toml  LICENSE  README.md  TODO.md  Taskfile.yml  cog.toml  demo.tape  mise.toml
.github/workflows/: ci.yml  conventions.yml  release.yml
samples/: cpp-cmake-error.ansi  csharp-dotnet.ansi  go-test.ansi  java-gradle.ansi  lua-busted.ansi  lua-error.ansi  node-vitest.ansi  python-pytest.ansi  ruby-rspec.ansi  rust-cargo-test.ansi  zig-error.ansi  zig-test.ansi
scripts/: generate-samples
src/: app.rs  main.rs  panels.rs  scaffold.rs  ui.rs
src/panels/: devtools.rs  git.rs  interactive.rs  languages.rs  mod.rs  samples.rs  system.rs
