[package]
name = "diorama"
version = "0.1.0"
edition = "2024"
description = "Preview terminal color themes with realistic scenarios"
repository = "https://github.com/tsilenzio/diorama"
license = "MIT"
readme = "README.md"
keywords = ["terminal", "tui", "theme", "ansi", "color-scheme"]
categories = ["command-line-utilities"]
exclude = [".github/", "samples/", "scripts/", "demo.tape", "demo.gif"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ansi-to-tui = "7"
tempfile = "3"
which = "7"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
thiserror = "2"
